# payflow-forecast

./: .gitignore  Cargo.toml  README.md  index.html  install.js  manifest.webmanifest  package.json  playwright.config.ts  styles.css  sw.js
.github/workflows/: pages.yml
e2e/: payflow.spec.ts
scripts/: e2e-server.mjs  e2e-smoke.mjs
src/: app.rs  forecast.rs  main.rs  models.rs
