[package]
name = "payflow-forecast"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
resolver = "3"

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
gloo-net = "0.6"
leptos = { version = "0.8.19", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window"] }

[dev-dependencies]
pretty_assertions = "1"
